--- a/client/style/style.less
+++ b/client/style/style.less
@@ -1,80 +1,163 @@
-// /* Definindo cada variação da fonte Roboto */
-// @font-face {
-//     font-family: 'Roboto-Regular';
-//     src: url('../fonts/Roboto-Regular.ttf') format('truetype');
-//     font-weight: 400;
-//     font-style: normal;
-// }
+// Definindo cada variação da fonte Roboto
+@font-face {
+    font-family: 'Roboto-Regular';
+    src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Roboto-Bold';
-//     src: url('../fonts/Roboto-Bold.ttf') format('truetype');
-//     font-weight: 700;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'Roboto-Bold';
+    src: url('../fonts/Roboto-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Roboto-Italic';
-//     src: url('../fonts/Roboto-Italic.ttf') format('truetype');
-//     font-weight: 400;
-//     font-style: italic;
-// }
+@font-face {
+    font-family: 'Roboto-Italic';
+    src: url('../fonts/Roboto-Italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
 
-// @font-face {
-//     font-family: 'Roboto-Light';
-//     src: url('../fonts/Roboto-Light.ttf') format('truetype');
-//     font-weight: 300;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'Roboto-Light';
+    src: url('../fonts/Roboto-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Roboto-Medium';
-//     src: url('../fonts/Roboto-Medium.ttf') format('truetype');
-//     font-weight: 500;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'Roboto-Medium';
+    src: url('../fonts/Roboto-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
 
-// @font-face {
-//     font-family: 'Roboto-Thin';
-//     src: url('../fonts/Roboto-Thin.ttf') format('truetype');
-//     font-weight: 100;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'Roboto-Thin';
+    src: url('../fonts/Roboto-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
 
-// :root {
-//     /* Definindo variáveis de cor */
-//     --primary-red: #BA1A1A;
-//     --secundary-red: #C13333;
-//     --darken-red: darken(var(--primary-red), 10%);
-//     --lighten-red: lighten(var(--secundary-red), 10%);
-//     --primary-white: #F0F0F0;
-//     --secundary-white: #E0E0E0;
-//     --terciary-white: #FFF;
-//     --quaternary-white: #D9D9D9;
-//     --primary-black: #1F1F1F;
-//     --secundary-black: #292929;
-//     --terciary-black: #303030;
-//     --darken-black: darken(var(--primary-black), 10%);
-//     --lighten-black: lighten(var(--secundary-black), 10%);
-//     --background-red: linear-gradient(to right, var(--primary-red), var(--secondary-red));
-//     --background-white: linear-gradient(to right, var(--primary-white), var(--secundary-white));
-//     --background-black: linear-gradient(to right, var(--primary-black), var(--secundary-black));
+// Definindo variáveis de cor
+@primary-red: #BA1A1A;
+@secundary-red: #C13333;
+@primary-white: #F0F0F0;
+@secundary-white: #E0E0E0;
+@terciary-white: #FFF;
+@quaternary-white: #D9D9D9;
+@primary-black: #1F1F1F;
+@secundary-black: #292929;
+@terciary-black: #303030;
 
+// Funções para escurecer e clarear cores
+@darken-red: darken(@primary-red, 10%);
+@lighten-red: lighten(@secundary-red, 10%);
+@darken-black: darken(@primary-black, 10%);
+@lighten-black: lighten(@secundary-black, 10%);
 
-//     /* Definindo variáveis de fonte */
-//     --roboto-regular: 'Roboto-Regular', sans-serif;
-//     --roboto-bold: 'Roboto-Bold', sans-serif;
-//     --roboto-italic: 'Roboto-Italic', sans-serif;
-//     --roboto-light: 'Roboto-Light', sans-serif;
-//     --roboto-medium: 'Roboto-Medium', sans-serif;
-//     --roboto-thin: 'Roboto-Thin', sans-serif;
-//     --font-size: 16px;
-// }
+// Definindo gradientes de fundo
+@background-red: linear-gradient(to right, @primary-red, @secundary-red);
+@background-white: linear-gradient(to right, @primary-white, @secundary-white);
+@background-black: linear-gradient(to right, @primary-black, @secundary-black);
+
+// Definindo variáveis de fonte
+@roboto-regular: 'Roboto-Regular', sans-serif;
+@roboto-bold: 'Roboto-Bold', sans-serif;
+@roboto-italic: 'Roboto-Italic', sans-serif;
+@roboto-light: 'Roboto-Light', sans-serif;
+@roboto-medium: 'Roboto-Medium', sans-serif;
+@roboto-thin: 'Roboto-Thin', sans-serif;
+@font-size: 16px;
 
 body {
     font-size: 16px;
     padding: none;
     margin: none;
     box-sizing: border-box;
-    background: linear-gradient(to right, #F0F0F0, #E0E0E0);
+    background: @background-white;
+}
+
+#login{
+    height: 100vh;
+
+    & #left-content{
+        & figure{
+            & img{
+                max-width: 80%;
+            }
+        }
+
+    }
+
+
+    & #middle-content{
+        height: 40%;
+        width: 0.01rem;
+        background: @lighten-black;
+    }
+
+    & #right-content{
+        & .options-password{
+            padding: 1rem 0rem 1rem 0rem;
+            font-family: @roboto-regular;
+        }
+    }
+}
+
+main{
+    & a{
+        text-decoration: none;
+        color: @secundary-black;
+    }
+
+    & button, input, textarea{
+        border: none;
+        background-color: transparent;
+        outline: none;
+
+        & .icon{
+            max-width: 1.5rem;
+            max-height: 1.5rem;
+        }
+    }
+
+    & h1{
+        font-family: @roboto-bold;
+    }
+
+    & .subtitle{
+        font-family: @roboto-regular;
+    }
+
+    & .button{
+        border-radius: 0.3rem;
+        padding: 0.5rem;
+        font-family: @roboto-medium;
+        font-size: 0.9rem;
+    }
+
+    & .btn-red{
+        background: @background-red;
+        color: @terciary-white;
+        text-transform: uppercase;
+    }
+
+    & .btn-white{
+        background: @primary-white;
+        color: @secundary-black;
+        font-family: @roboto-light;
+    }
+
+    & .form-inputs{
+        gap: 1.8rem;
+        & input{
+            background: transparent;
+            border: 0.01rem solid @primary-black;
+            border-radius: 0.2rem;
+            padding: 0.5rem 1rem 0.5rem 1rem;
+        }
+    }
 }
