--- a/client/style/style.less
+++ b/client/style/style.less
@@ -48,6 +48,7 @@
 @secundary-white: #E0E0E0;
 @terciary-white: #FFF;
 @quaternary-white: #D9D9D9;
+@quinary-white: #F5F5F5;
 @primary-black: #1F1F1F;
 @secundary-black: #292929;
 @terciary-black: #303030;
@@ -82,16 +83,13 @@ body {
 
 #login{
     height: 100vh;
-
     & #left-content{
         & figure{
             & img{
                 max-width: 80%;
             }
         }
-
     }
-
 
     & #middle-content{
         height: 40%;
@@ -107,7 +105,28 @@ body {
     }
 }
 
+header{
+    width: 6rem;
+    height: auto;
+    background: transparent;
+
+    & nav{
+        padding: 5rem 0rem 5rem 0rem;
+
+        & .icon{
+            width: 2.5rem;
+            height: 2.5rem;
+        }
+    }
+}
+
 main{
+    & .dinamic-content{
+        width: 70vw;
+        height: 30vh;
+        background-color: @quinary-white;
+    }
+
     & a{
         text-decoration: none;
         color: @secundary-black;
@@ -135,7 +154,7 @@ main{
     & .button{
         border-radius: 0.3rem;
         padding: 0.5rem;
-        font-family: @roboto-medium;
+        font-family: @roboto-regular;
         font-size: 0.9rem;
     }
 
