--- a/client/style/style.less
+++ b/client/style/style.less
@@ -181,8 +181,8 @@ main {
         }
 
         & .form-content {
-            margin-top: 1rem;
-            border-radius: 0.1rem;
+            margin: 1rem 0rem 1rem 0rem;
+            border-radius: 0.1rem 0.1rem 0.3rem 0.3rem;
             background: @terciary-white;
             box-shadow: 1px 0px 2px 0px @quaternary-white;
             padding: 1.5rem;
@@ -217,7 +217,7 @@ main {
                         width: 16rem;
                         border: 0.01px solid @primary-black;
                         border-radius: 0.3rem;
-                        padding: 0.4rem 1rem 0.4rem 1rem;
+                        padding: 0.5rem 1rem 0.5rem 1rem;
                         font-size: 0.9rem;
                         font-family: @roboto-regular;
                         margin: 1.7rem 0rem 0rem 0rem;
