Inicio da tela de criação de projeto

--- a/client/style/style.less
+++ b/client/style/style.less
@@ -212,7 +212,8 @@ main {
                     gap: 5%;
 
                     & input,
-                    select {
+                    select,
+                    textarea {
                         outline: none;
                         width: 16rem;
                         border: 0.01px solid @primary-black;
@@ -221,6 +222,7 @@ main {
                         font-size: 0.9rem;
                         font-family: @roboto-regular;
                         margin: 1.7rem 0rem 0rem 0rem;
+                        resize: none;
                     }
                 }
             }
