--- a/client/style/style.less
+++ b/client/style/style.less
@@ -62,7 +62,7 @@
 
 // Definindo gradientes de fundo
 @background-red: linear-gradient(to right, @primary-red, @secundary-red);
-@background-white: linear-gradient(to right, @primary-white, @secundary-white);
+@background-white: linear-gradient(to right, @primary-white, lighten(@secundary-white, 7%));
 @background-black: linear-gradient(to right, @primary-black, @secundary-black);
 
 // Definindo variáveis de fonte
@@ -137,7 +137,10 @@ main {
         font-family: @roboto-regular;
     }
 
-    & .button {
+    & button {
+        outline: none;
+        border: none;
+        box-shadow: none;
         border-radius: 0.3rem;
         padding: 0.5rem;
         font-family: @roboto-regular;
@@ -145,12 +148,14 @@ main {
     }
 
     & .btn-red {
+        border-color: @primary-red;
         background: @background-red;
         color: @terciary-white;
         text-transform: uppercase;
     }
 
     & .btn-white {
+        border-color: @primary-white;
         background: @primary-white;
         color: @secundary-black;
         font-family: @roboto-light;
@@ -183,7 +188,7 @@ main {
         & .form-content {
             margin: 1rem 0rem 1rem 0rem;
             border-radius: 0.1rem 0.1rem 0.3rem 0.3rem;
-            background: @terciary-white;
+            background: linear-gradient(to right, lighten(@primary-white, 7%), lighten(@secundary-white, 7%));
             box-shadow: 1px 0px 2px 0px @quaternary-white;
             padding: 1.5rem;
 
@@ -217,10 +222,14 @@ main {
                         width: 16rem;
                         border: 0.01px solid @primary-black;
                         border-radius: 0.3rem;
-                        padding: 0.5rem 1rem 0.5rem 1rem;
+                        padding: 0.400rem 1rem 0.400rem 1rem;
                         font-size: 0.9rem;
                         font-family: @roboto-regular;
                         margin: 1.7rem 0rem 0rem 0rem;
+                    }
+
+                    & select {
+                        padding: 0.420rem 1rem 0.420rem 1rem;
                     }
                 }
             }
@@ -290,38 +299,69 @@ main {
     }
 }
 
-#home{
-    .form-content{
-        & .box-search{
-            & .form-inputs{
+#home {
+    .form-content {
+        & .box-search {
+            & .form-inputs {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
+                justify-content: start;
+                gap: 1rem;
 
-                & .input-content{
-                    & label{
+                & .input-content {
+                    margin: 0px;
+                    padding: 0px;
+                    margin-top: 1rem;
 
+                    & label {
+                        color: @primary-black;
+                        opacity: 0.8;
+                        text-transform: uppercase;
+                        padding-bottom: 0.5rem;
+                        font-size: 0.9rem;
                     }
 
-                    & .input-section, .select-section{
+                    & button {
+                        padding: 0.3rem 1.5rem 0.2rem 1.5rem;
+                        border-radius: 0.2rem;
+                        background: @terciary-white;
+                        box-shadow: 0px 0px 3px 0px lighten(@primary-black, 50%);
+                    }
+
+                    & .input-section,
+                    .select-section {
+                        border-radius: 0.4rem;
                         display: flex;
                         flex-direction: row;
-                        justify-content: start;
-                        align-items: start;
+                        justify-content: center;
+                        align-items: center;
+                        cursor: pointer;
 
-                        & img{
-                            background-color: @background-red;
-                            width: 10px;
+                        & .input-icon {
+                            background: @background-red;
+                            border-radius: 0.4rem 0rem 0rem 0.4rem;
+                            padding: 0.4rem 0.6rem 0.4rem 0.6rem;
 
+                            & img {
+                                width: 1.2rem;
+                            }
                         }
 
-                        & input, select{
-
+                        & input,
+                        select {
+                            border: none;
+                            margin: 0rem;
+                            border-radius: 0px;
+                            border-top: 0.01rem solid @primary-black;
+                            border-bottom: 0.01rem solid @primary-black;
+                            border-right: 0.01rem solid @primary-black;
+                            border-radius: 0rem 0.2rem 0.2rem 0rem;
                         }
                     }
+                }
 
-                    & button{
-
-                    }
+                & .gap-column {
+                    width: 1.3rem;
                 }
             }
         }
