--- a/client/style/style.less
+++ b/client/style/style.less
@@ -123,6 +123,16 @@ header {
     }
 }
 
+button {
+    outline: none;
+    border: none;
+    box-shadow: none;
+    border-radius: 0.3rem;
+    padding: 0.5rem;
+    font-family: @roboto-regular;
+    font-size: 0.9rem;
+}
+
 main {
     & a {
         text-decoration: none;
@@ -135,16 +145,6 @@ main {
 
     & .subtitle {
         font-family: @roboto-regular;
-    }
-
-    & button {
-        outline: none;
-        border: none;
-        box-shadow: none;
-        border-radius: 0.3rem;
-        padding: 0.5rem;
-        font-family: @roboto-regular;
-        font-size: 0.9rem;
     }
 
     & .btn-red {
@@ -434,6 +434,78 @@ main {
                         padding: 0.5rem 1rem 0.5rem 1rem;  
                     }
                 }
+            }
+        }
+    }
+}
+
+#my-projects{
+    width: 30vw;
+
+    & .section-title{
+        width: 100%;
+        background: @background-red;
+        color: @terciary-white;
+        padding: 1rem;
+        border-radius: 0.5rem 0.5rem 0rem 0rem;
+        box-shadow: 1px 0px 6px lighten(@terciary-black, 50%);
+
+
+        & h2{
+            font-size: 1.5rem;
+        }
+    }
+
+    & .current-projects{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+        background: @quinary-white;
+        border-radius: 0rem 0rem 0.5rem 0.5rem;
+        padding: 1rem;
+        box-shadow: 1px 0px 6px lighten(@terciary-black, 50%);
+
+        & p{
+            color: lighten(@primary-black, 30%);
+            text-transform: uppercase;
+        }
+
+        & .project{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 1rem;
+            background: @terciary-white;
+            padding: 1rem;
+
+            & h4{
+                text-transform: uppercase;
+                font-family: @roboto-bold;
+                font-size: 1.2rem;
+            }
+
+            & h5{
+                font-weight: 500;
+                color: lighten(@primary-black, 30%);
+                font-size: 1.1rem;
+            }
+
+            & p{
+                text-transform: lowercase;
+            }
+        }
+
+        & .button-section{
+            padding-top: 1.5rem;
+
+            & button{
+                padding: 0.4rem 0.7rem 0.4rem 0.7rem;
+                background: @background-red;
+                color: @terciary-white;
+                outline: none;
+                border-radius: 0.3rem;
             }
         }
     }
