--- a/client/style/style.less
+++ b/client/style/style.less
@@ -212,6 +212,19 @@ main {
                     gap: 5%;
                 }
 
+                & h1, h2 {
+                    font-size: 1.2rem;
+                    margin: 1.7rem 0rem 0rem 0rem;
+                    font-weight: 100;
+                    font-family: @roboto-regular;
+                }
+
+                & h2 {
+                    color: @primary-red;
+                    font-size: .8rem;
+                    margin: .5rem 0rem 0rem 0rem;
+                }
+
                 & .form-inputs {
                     gap: 5%;
 
